WIP on user info objects

--- a/uDrive/uDrive.Core/App_Plugins/uDrive/backOffice/uDriveTree/partials/files.html
+++ b/uDrive/uDrive.Core/App_Plugins/uDrive/backOffice/uDriveTree/partials/files.html
@@ -2,9 +2,6 @@
     <div class="umb-pane">
         <h1>{{ title }}</h1>
         
-        <pre>{{ details }}</pre>
-        
-        <pre>{{ files }}</pre>
-
+        <pre>{{ userInfo }}</pre>
     </div>
 </div>
