--- a/uDrive/uDrive.Core/App_Plugins/uDrive/backOffice/uDriveTree/partials/settings.html
+++ b/uDrive/uDrive.Core/App_Plugins/uDrive/backOffice/uDriveTree/partials/settings.html
@@ -1,7 +1,7 @@
 ﻿<div ng-controller="uDrive.SettingsController">
-    <div class="umb-pane">
+    <div class="umb-pane form-horizontal">
         <h4>
-            <localize key="analytics_settings">Settings</localize>
+            <localize key="udrive_settings">Settings</localize>
         </h4>
         <div ng-hide="hasAuth">
             <umb-control-group label="Authorisation" description="Login with Google via oAuth to verify">
