--- a/uDrive/uDrive.Core/App_Plugins/uDrive/backOffice/uDriveTree/partials/files.html
+++ b/uDrive/uDrive.Core/App_Plugins/uDrive/backOffice/uDriveTree/partials/files.html
@@ -14,7 +14,7 @@
             
             <div class="controls controls-row">
                 <div class="row-fluid">
-                    <ul class="thumbnails" ng-repeat="file in driveInfo.files">
+                    <ul class="thumbnails" ng-repeat="file in driveData.files">
                         <li class="span2">
                             <div class="thumbnail" style="margin-right: 20px; padding: 20px;">
                                 <a class="btn-link -underline" title="{{ file.name }}">
